angular-translate -riippuvuus.

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -41,6 +41,7 @@
   <script src="bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
   <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
   <script src="bower_components/angular-placeholder-tai/lib/tai-placeholder.js"></script>
+  <script src="bower_components/angular-translate/angular-translate.min.js"></script>
   <script src="bower_components/lodash/dist/lodash.min.js"></script>
   <script src="bower_components/stacktrace/stacktrace.js"></script>
   <script src="bower_components/AngularJS-Toaster/toaster.js"></script>
