--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -28,6 +28,8 @@
   </noscript>
 
   <h1>osaan.fi</h1>
+
+  <div translate="etusivu.otsikko"></div>
   <!--<![endif]-->
 
   <!-- build:js js/libs.js -->
@@ -49,6 +51,7 @@
   <!-- endbuild -->
   <!-- build:js js/app.js -->
   <script src="js/osaan.js"></script>
+  <script src="js/tekstit.js"></script>
   <!-- endbuild -->
   <!--dev--><script src="//localhost:35729/livereload.js"></script><!--enddev-->
 </body>
