OPH-1339: Tyhjä etusivu-näkymä.

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -80,6 +80,7 @@
   <!-- build:js js/app.js -->
   <script src="js/osaan.js"></script>
   <script src="js/tekstit.js"></script>
+  <script src="js/etusivu/etusivuui.js"></script>
   <!-- endbuild -->
   <!--dev--><script src="//localhost:35729/livereload.js"></script><!--enddev-->
 </body>
