OPH-1339: Footerin tekstejä.

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -44,10 +44,10 @@
   <footer>
     <section class="info">
       <div class="app-wrapper">
-        <h3 translate="yleiset.footer_info_otsikko"></h3>
-        <p translate="yleiset.footer_info_ohje"></p>
-        <p><span translate="yleiset.footer_info_teksti_2"></span> <a target="_blank" href="{{'yleiset.neuvontapalvelu_linkki' | translate}}" translate="yleiset.rekisteriseloste"></a></p>
-        <p class="footer-contact"><span translate="yleiset.ota_yhteytta"></span>: <a ng-href="mailto:{{'i18n.yleiset.ota_yhteytta_email' | translate}}" translate="yleiset.ota_yhteytta_email"></a></p>
+        <h3 translate="footer.otsikko"></h3>
+        <p translate="footer.ohje"></p>
+        <p><span translate="footer.rekisteriseloste"></span> <a target="_blank" href="{{'footer.rekisteriseloste_url' | translate}}" translate="footer.rekisteriseloste_url"></a></p>
+        <p class="footer-contact"><span translate="footer.ota_yhteytta"></span>: <a ng-href="mailto:{{'footer.ota_yhteytta_email' | translate}}" translate="footer.ota_yhteytta_email"></a></p>
       </div>
     </section>
     <section class="copyright">
