--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -82,6 +82,7 @@
   <script src="js/tekstit.js"></script>
   <script src="js/etusivu/etusivuui.js"></script>
   <script src="js/palvelut/opintoala.js"></script>
+  <script src="js/palvelut/tutkinto.js"></script>
   <!-- endbuild -->
   <!--dev--><script src="//localhost:35729/livereload.js"></script><!--enddev-->
 </body>
