aituaipaljs lokalisointi-moduuli käyttöön.

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -76,6 +76,7 @@
   <script src="bower_components/stacktrace/stacktrace.js"></script>
   <script src="bower_components/AngularJS-Toaster/toaster.js"></script>
   <script src="bower_components/ng-breadcrumbs/dist/ng-breadcrumbs.min.js"></script>
+  <script src="bower_components/aituaipaljs/src/js/yhteiset/palvelut/lokalisointi.js"></script>
   <!-- endbuild -->
   <!-- build:js js/app.js -->
   <script src="js/osaan.js"></script>
