Uudelleennimeä Opintoala-palvelu -> Koulutusala.

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -82,7 +82,7 @@
   <script src="js/osaan.js"></script>
   <script src="js/tekstit.js"></script>
   <script src="js/etusivu/etusivuui.js"></script>
-  <script src="js/palvelut/opintoala.js"></script>
+  <script src="js/palvelut/koulutusala.js"></script>
   <script src="js/palvelut/tutkinto.js"></script>
   <!-- endbuild -->
   <!--dev--><script src="//localhost:35729/livereload.js"></script><!--enddev-->
