--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -36,7 +36,7 @@
       </section>
     </header>
     <section class="app-wrapper">
-      <!-- <kielen-vaihto></kielen-vaihto> -->
+      <kielen-vaihto></kielen-vaihto>
     </section>
     <section class="app-wrapper main-content" ng-view></section>
   </section>
@@ -81,6 +81,7 @@
   <!-- build:js js/app.js -->
   <script src="js/osaan.js"></script>
   <script src="js/tekstit.js"></script>
+  <script src="js/direktiivit/kielen-vaihto.js"></script>
   <script src="js/etusivu/etusivuui.js"></script>
   <script src="js/palvelut/koulutusala.js"></script>
   <script src="js/palvelut/tutkinto.js"></script>
