OPH-1346: Lisää ohje-direktiivi.

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -82,8 +82,10 @@
   <script src="js/osaan.js"></script>
   <script src="js/tekstit.js"></script>
   <script src="js/direktiivit/kielen-vaihto.js"></script>
+  <script src="js/direktiivit/ohje.js"></script>
   <script src="js/etusivu/etusivuui.js"></script>
   <script src="js/palvelut/koulutusala.js"></script>
+  <script src="js/palvelut/ohje.js"></script>
   <script src="js/palvelut/tutkinto.js"></script>
   <!-- endbuild -->
   <!--dev--><script src="//localhost:35729/livereload.js"></script><!--enddev-->
