Runko "tutkinnon osien valinta" -sivulle.

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -84,6 +84,7 @@
   <script src="js/direktiivit/kielen-vaihto.js"></script>
   <script src="js/direktiivit/ohje.js"></script>
   <script src="js/etusivu/etusivuui.js"></script>
+  <script src="js/osien-valinta/osien-valintaui.js"></script>
   <script src="js/palvelut/koulutusala.js"></script>
   <script src="js/palvelut/ohje.js"></script>
   <script src="js/palvelut/tutkinto.js"></script>
