--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -87,6 +87,7 @@
   <script src="js/osien-valinta/osien-valintaui.js"></script>
   <script src="js/rest/koulutusala.js"></script>
   <script src="js/rest/ohje.js"></script>
+  <script src="js/rest/tutkinnonosa.js"></script>
   <script src="js/rest/tutkinto.js"></script>
   <!-- endbuild -->
   <!--dev--><script src="//localhost:35729/livereload.js"></script><!--enddev-->
