--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -61,6 +61,26 @@
 
   <!--<![endif]-->
 
+  <!-- Piwik -->
+  <script type="text/javascript">
+    var _paq = _paq || [];
+    _paq.push(['trackPageView']);
+    _paq.push(['enableLinkTracking']);
+    if (document.location.hostname != "localhost" && document.location.hostname != "192.168.50.1") {
+      (function() {
+        var u="https://analytiikka.opintopolku.fi/piwik/";
+        _paq.push(['setTrackerUrl', u+'piwik.php']);
+        _paq.push(['setSiteId', 12]);
+        var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+        g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+      })();
+    } else {
+      // Analytiikka pois devauksessa
+    }
+  </script>
+  <noscript><p><img src="https://analytiikka.opintopolku.fi/piwik/piwik.php?idsite=12" style="border:0;" alt="" /></p></noscript>
+  <!-- End Piwik Code -->
+
   <!-- build:js js/libs.js -->
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/angular/angular.js"></script>
