OPH-1372: Palvelu arvioinnin kohdealueiden ja kohteiden hakuun.

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -114,6 +114,7 @@
   <script src="js/osien-valinta/osien-valintaui.js"></script>
   <script src="js/arviointi/arviointiui.js"></script>
   <script src="js/palvelut/arviointi.js"></script>
+  <script src="js/rest/arvioinninkohde.js"></script>
   <script src="js/rest/koulutusala.js"></script>
   <script src="js/rest/ohje.js"></script>
   <script src="js/rest/tutkinnonosa.js"></script>
