ui-animate view, vapaatekstin class-korjaus

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -45,7 +45,7 @@
       </ol>
       <kielen-vaihto></kielen-vaihto>
     </section>
-    <section class="app-wrapper main-content" ng-view></section>
+    <section class="view-animate app-wrapper main-content" ng-view></section>
   </section>
 
   <footer>
