OPH-1345: Lisää raportti-sivu

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -118,6 +118,7 @@
   <script src="js/lataa/lataaui.js"></script>
   <script src="js/osien-valinta/osien-valintaui.js"></script>
   <script src="js/palvelut/arviointi.js"></script>
+  <script src="js/raportti/raporttiui.js"></script>
   <script src="js/rest/arvio.js"></script>
   <script src="js/rest/arvioinninkohde.js"></script>
   <script src="js/rest/koulutusala.js"></script>
