OPH-1349: Arvion lataaminen, /lataa/:arviotunnus

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -112,6 +112,7 @@
   <script src="js/direktiivit/ohje.js"></script>
   <script src="js/arviointi/arviointiui.js"></script>
   <script src="js/etusivu/etusivuui.js"></script>
+  <script src="js/lataa/lataaui.js"></script>
   <script src="js/osien-valinta/osien-valintaui.js"></script>
   <script src="js/palvelut/arviointi.js"></script>
   <script src="js/rest/arvio.js"></script>
