--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -11,7 +11,7 @@
   <!-- endbuild -->
   <link rel="stylesheet" href="compiled_css/main.css">
 
-  <meta name="viewport" content="width=device-width, initial-scale=.8, maximum-scale=.8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=.9, maximum-scale=.9"/>
 </head>
 <!--[if lt IE 9]>
 <body>
@@ -45,7 +45,7 @@
       </ol>
       <kielen-vaihto></kielen-vaihto>
     </section>
-    <section class="view-animate app-wrapper main-content" ng-view></section>
+    <section class="view-animate app-wrapper main-content" ng-view autoscroll></section>
   </section>
 
   <footer>
