OPH-1349: Tallennus-direktiivi.

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -44,6 +44,7 @@
         </li>
       </ol>
       <kielen-vaihto></kielen-vaihto>
+      <tallennus></tallennus>
     </section>
     <section class="view-animate app-wrapper main-content" ng-view autoscroll></section>
   </section>
@@ -110,6 +111,7 @@
   <script src="js/tekstit.js"></script>
   <script src="js/direktiivit/kielen-vaihto.js"></script>
   <script src="js/direktiivit/ohje.js"></script>
+  <script src="js/direktiivit/tallennus.js"></script>
   <script src="js/arviointi/arviointiui.js"></script>
   <script src="js/etusivu/etusivuui.js"></script>
   <script src="js/lataa/lataaui.js"></script>
