Kielikäännöksiä etusivulle ja yleisiä

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -15,15 +15,16 @@
 <!--[if lt IE 9]>
 <body>
 <div style="text-align: center;">
-  <p><strong>Sovellus ei tue käyttämääsi selainta. Ole hyvä ja käytä Internet Explorerin versiota 9 tai uudempaa.</strong></p>
+  <p><strong>Osaan.fi ei tue käyttämääsi selainta. Ole hyvä ja käytä Internet Explorerin versiota 9 tai uudempaa.</strong></p>
+  <p><strong>Osaan.fi ei tue käyttämääsi selainta. Ole hyvä ja käytä Internet Explorerin versiota 9 tai uudempaa. (sv) todo:Käännös</strong></p>
 </div>
 <![endif]-->
 <!--[if gte IE 9]><!-->
 <body ng-controller="OsaanController">
   <noscript>
     <div class="top-alert">
-      <p>Sivusto vaatii toimiakseen selaimen javascript-tuen päälle. Ole hyvä ja salli javascriptien/komentosarjojen ajo selaimessasi.</p>
-      <p>Aktivera Javaskript i webbläsaren så att du kan använda webbplatsen för sökexamen.fi</p>
+      <p>Osaan.fi vaatii toimiakseen selaimen javascript-tuen päälle. Ole hyvä ja salli javascriptin ajo selaimessasi.</p>
+      <p>Aktivera Javaskript i webbläsaren så att du kan använda webbplatsen för osaan.fi</p>
     </div>
   </noscript>
 
