OPH-1342: Nimeä frontissa käsite arvioinnin kohde -> ammattitaidon kuvaus

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -120,7 +120,7 @@
   <script src="js/palvelut/arviointi.js"></script>
   <script src="js/raportti/raporttiui.js"></script>
   <script src="js/rest/arvio.js"></script>
-  <script src="js/rest/arvioinninkohde.js"></script>
+  <script src="js/rest/ammattitaidonkuvaus.js"></script>
   <script src="js/rest/koulutusala.js"></script>
   <script src="js/rest/ohje.js"></script>
   <script src="js/rest/tutkinnonosa.js"></script>
