--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -102,6 +102,7 @@
   <!-- build:js js/app.js -->
   <script src="js/osaan.js"></script>
   <script src="js/tekstit.js"></script>
+  <script src="js/direktiivit/kaavio.js"></script>
   <script src="js/direktiivit/kielen-vaihto.js"></script>
   <script src="js/direktiivit/ohje.js"></script>
   <script src="js/direktiivit/tallennus.js"></script>
