OPH-1384: Lisää polku-direktiivi
Näyttää eri vaiheet ja aktivoi linkit kun vaihe on saatavilla.

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -113,6 +113,7 @@
   <script src="js/direktiivit/ohje.js"></script>
   <script src="js/direktiivit/tallennus.js"></script>
   <script src="js/direktiivit/eperusteet-linkki.js"></script>
+  <script src="js/direktiivit/polku.js"></script>
   <script src="js/arviointi/arviointiui.js"></script>
   <script src="js/etusivu/etusivuui.js"></script>
   <script src="js/lataa/lataaui.js"></script>
