OPH-1384: Poista ng-breadcrumbs -riippuvuus

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -20,7 +20,7 @@
 </div>
 <![endif]-->
 <!--[if gte IE 9]><!-->
-<body ng-controller="OsaanController">
+<body>
   <noscript>
     <div class="top-alert">
       <p>Osaan.fi vaatii toimiakseen selaimen javascript-tuen päälle. Ole hyvä ja salli javascriptin ajo selaimessasi.</p>
@@ -97,7 +97,6 @@
   <script src="bower_components/lodash/dist/lodash.min.js"></script>
   <script src="bower_components/stacktrace/stacktrace.js"></script>
   <script src="bower_components/AngularJS-Toaster/toaster.js"></script>
-  <script src="bower_components/ng-breadcrumbs/dist/ng-breadcrumbs.min.js"></script>
   <script src="bower_components/aituaipaljs/src/js/yhteiset/palvelut/lokalisointi.js"></script>
   <!-- endbuild -->
   <!-- build:js js/app.js -->
