OPH-1385: Lisää varmistus-palvelu
Pohjautuu AIPALin vastaavaan palveluun.

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -112,6 +112,7 @@
   <script src="js/lataa/lataaui.js"></script>
   <script src="js/osien-valinta/osien-valintaui.js"></script>
   <script src="js/palvelut/arviointi.js"></script>
+  <script src="js/palvelut/varmistus.js"></script>
   <script src="js/raportti/raporttiui.js"></script>
   <script src="js/rest/arvio.js"></script>
   <script src="js/rest/ammattitaidonkuvaus.js"></script>
