OPH-1388: Tallennusnappi myös raporttisivulle. Kielimuuttujia ym.

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -36,7 +36,7 @@
         <h1><a href="#/" translate="etusivu.otsikko"></a></h1>
       </section>
     </header>
-    <section class="app-wrapper clearfix">
+    <section class="app-wrapper clearfix lang-nav">
       <kielen-vaihto></kielen-vaihto>
       <tallennus></tallennus>
     </section>
