OPH-1352: Lisää Raportti-palvelu
Puljaa tutkinnon, tutkinnonosat ja kohdealueet rakenteiseksi. Ja
myöhemmin laskee myös keskiarvot.

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -111,6 +111,7 @@
   <script src="js/lataa/lataaui.js"></script>
   <script src="js/osien-valinta/osien-valintaui.js"></script>
   <script src="js/palvelut/arviointi.js"></script>
+  <script src="js/palvelut/raportti.js"></script>
   <script src="js/palvelut/tekstiraportti.js"></script>
   <script src="js/palvelut/varmistus.js"></script>
   <script src="js/raportti/raporttiui.js"></script>
