--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -90,6 +90,7 @@
   <script src="bower_components/angular-route/angular-route.min.js"></script>
   <script src="bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
   <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+  <script src="bower_components/bootstrap-sass/assets/javascripts/bootstrap/alert.js"></script>
   <script src="bower_components/angular-placeholder-tai/lib/tai-placeholder.js"></script>
   <script src="bower_components/angular-translate/angular-translate.min.js"></script>
   <script src="bower_components/lodash/dist/lodash.min.js"></script>
