OPH-1423: Lisää Huomautus-palvelu

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -113,6 +113,7 @@
   <script src="js/lataa/lataaui.js"></script>
   <script src="js/osien-valinta/osien-valintaui.js"></script>
   <script src="js/palvelut/arviointi.js"></script>
+  <script src="js/palvelut/huomautus.js"></script>
   <script src="js/palvelut/poistumisvaroitus.js"></script>
   <script src="js/palvelut/raportti.js"></script>
   <script src="js/palvelut/tekstiraportti.js"></script>
