OPH-1423: Lisää huomautukset-direktiivi

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -101,6 +101,7 @@
   <!-- build:js js/app.js -->
   <script src="js/osaan.js"></script>
   <script src="js/tekstit.js"></script>
+  <script src="js/direktiivit/huomautukset.js"></script>
   <script src="js/direktiivit/kaavio.js"></script>
   <script src="js/direktiivit/kielen-vaihto.js"></script>
   <script src="js/direktiivit/ohje.js"></script>
