OPH-1418: Lisää scrollfix-riippuvuus

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -96,6 +96,7 @@
   <script src="bower_components/lodash/dist/lodash.min.js"></script>
   <script src="bower_components/stacktrace/stacktrace.js"></script>
   <script src="bower_components/AngularJS-Toaster/toaster.js"></script>
+  <script src="bower_components/jquery-scrollfix/src/scrollfix.js"></script>
   <script src="bower_components/aituaipaljs/src/js/yhteiset/palvelut/lokalisointi.js"></script>
   <!-- endbuild -->
   <!-- build:js js/app.js -->
