--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -118,6 +118,7 @@
   <script src="js/palvelut/huomautus.js"></script>
   <script src="js/palvelut/poistumisvaroitus.js"></script>
   <script src="js/palvelut/raportti.js"></script>
+  <script src="js/palvelut/tallennus.js"></script>
   <script src="js/palvelut/tekstiraportti.js"></script>
   <script src="js/palvelut/varmistus.js"></script>
   <script src="js/raportti/raporttiui.js"></script>
