OPH-1422: Alalaidan yleiset tekstit

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -47,15 +47,15 @@
     <section class="info">
       <div class="app-wrapper">
         <h3 translate="footer.otsikko"></h3>
-        <p translate="footer.ohje"></p>
-        <p><span translate="footer.rekisteriseloste"></span> <a target="_blank" href="{{'footer.rekisteriseloste_url' | translate}}" translate="footer.rekisteriseloste_url"></a></p>
+        <p><span translate="footer.ohje"></span> <a ng-href="{{'footer.ohje_url' | translate}}" translate="footer.ohje_url_title"></a></p>
+        <p><span translate="footer.rekisteriseloste"></span> <a target="_blank" href="{{'footer.rekisteriseloste_url' | translate}}" translate="footer.rekisteriseloste_url_title"></a></p>
         <p class="footer-contact"><span translate="footer.ota_yhteytta"></span>: <a ng-href="mailto:{{'footer.ota_yhteytta_email' | translate}}" translate="footer.ota_yhteytta_email"></a></p>
       </div>
     </section>
     <section class="copyright">
       <div class="app-wrapper">
         <div class="vertical-wrapper">
-          <span copyright></span>
+          <span copyright>Copyright &copy; Opetushallitus 2015 | <a href="http://www.oph.fi">www.oph.fi</a></span>
         </div>
       </div>
     </section>
