OPH-1412: Osaan.fi -näkyviin

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -33,7 +33,8 @@
       <section class="app-wrapper">
         <a id="oph-logo" href="http://www.oph.fi"></a>
         <a id="turre-logo" href="#/"></a>
-        <h1><a href="#/" translate="etusivu.otsikko"></a></h1>
+        <h1 class="logo"><a href="#/" translate="etusivu.otsikko"></a><br /><span class="small-type jagkan" translate="etusivu.jagkan"></span></h1>
+
       </section>
     </header>
     <section class="app-wrapper clearfix lang-nav">
