OPH-1441: meta robots: index, nofollow

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -10,6 +10,7 @@
   <!-- endbuild -->
   <link rel="stylesheet" href="compiled_css/main.css">
 
+  <meta name="robots" content="index, nofollow">
   <meta name="viewport" content="width=device-width, initial-scale=.9, maximum-scale=.9"/>
 </head>
 <!--[if lt IE 9]>
