--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -112,6 +112,7 @@
   <script src="js/direktiivit/eperusteet-linkki.js"></script>
   <script src="js/direktiivit/polku.js"></script>
   <script src="js/direktiivit/osalista.js"></script>
+  <script src="js/direktiivit/tutkinnonosa-tilastot.js"></script>
   <script src="js/arviointi/arviointiui.js"></script>
   <script src="js/etusivu/etusivuui.js"></script>
   <script src="js/lataa/lataaui.js"></script>
