--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="compiled_css/main.css">
 
   <meta name="robots" content="index, nofollow">
+  <meta name="description" content="Avoin, julkinen palvelu oman osaamisen arviointiin valitussa ammatissa. Arviointikriteereinä käytetään tutkintojen perusteita.">
+  <meta name="keywords" content="ammatti, ammattitaitovaatimus,tutkinnon perusteet,näyttötutkinto,arviointi,ammatillinen perustutkinto,perustutkinto,ammattitutkinto,erikoisammattitutkinto,aikuiskoulutus,ammattikoulutus,pt,at,eat">
   <meta name="viewport" content="width=device-width, initial-scale=.9, maximum-scale=.9"/>
 </head>
 <!--[if lt IE 9]>
