Päivitä meta description
Ks. OPH-1444 kommentti.

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="compiled_css/main.css">
 
   <meta name="robots" content="index, nofollow">
-  <meta name="description" content="Avoin, julkinen palvelu oman osaamisen arviointiin valitussa ammatissa. Arviointikriteereinä käytetään tutkintojen perusteita.">
+  <meta name="description" content="Palvelu oman osaamisen arviointiin ammatillisissa perustutkinnoissa sekä ammatti- ja erikoisammattitutkinnoissa.">
   <meta name="keywords" content="ammatti, ammattitaitovaatimus,tutkinnon perusteet,näyttötutkinto,arviointi,ammatillinen perustutkinto,perustutkinto,ammattitutkinto,erikoisammattitutkinto,aikuiskoulutus,ammattikoulutus,pt,at,eat">
   <meta name="viewport" content="width=device-width, initial-scale=.9, maximum-scale=.9"/>
 </head>
