--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="compiled_css/main.css">
 
   <meta name="robots" content="index, nofollow">
-  <meta name="description" content="Palvelu oman osaamisen arviointiin ammatillisissa perustutkinnoissa sekä ammatti- ja erikoisammattitutkinnoissa.">
+  <meta name="description" content="Palvelu oman osaamisen arviointiin ammatillisissa perustutkinnoissa sekä ammatti- ja erikoisammattitutkinnoissa. Tjänst för bedömning av det egna kunnandet inom yrkesinriktade grundexamina, yrkesexamina och specialyrkesexamina.">
   <meta name="keywords" content="ammatti, ammattitaitovaatimus,tutkinnon perusteet,näyttötutkinto,arviointi,ammatillinen perustutkinto,perustutkinto,ammattitutkinto,erikoisammattitutkinto,aikuiskoulutus,ammattikoulutus,pt,at,eat">
   <meta name="viewport" content="width=device-width, initial-scale=.9, maximum-scale=.9"/>
 </head>
@@ -19,7 +19,7 @@
 <body>
 <div style="text-align: center;">
   <p><strong>Osaan.fi ei tue käyttämääsi selainta. Ole hyvä ja käytä Internet Explorerin versiota 9 tai uudempaa.</strong></p>
-  <p><strong>Osaan.fi ei tue käyttämääsi selainta. Ole hyvä ja käytä Internet Explorerin versiota 9 tai uudempaa. (sv) todo:Käännös</strong></p>
+  <p><strong>Jagkan.fi stöder inte din webbläsare. Använd version 9 eller en nyare version av Internet Explorer.</strong></p>
 </div>
 <![endif]-->
 <!--[if gte IE 9]><!-->
