--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -49,7 +49,7 @@
     <section class="view-animate app-wrapper main-content" ng-view autoscroll></section>
   </section>
 
-  <footer>
+  <footer class="hidden-print">
     <section class="info">
       <div class="app-wrapper">
         <h3 translate="footer.otsikko"></h3>
