OPH-1468: Näytä virheilmoitus jos $http-pyyntö epäonnistuu

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -42,6 +42,7 @@
         <h1 class="logo"><a href="#/" translate="etusivu.otsikko"></a><br /><span class="small-type jagkan" translate="etusivu.jagkan"></span></h1>
       </section>
     </header>
+    <http-virhe></http-virhe>
     <section class="app-wrapper clearfix lang-nav hidden-print">
       <kielen-vaihto></kielen-vaihto>
       <tallennus></tallennus>
@@ -109,6 +110,7 @@
   <!-- build:js js/app.js -->
   <script src="js/osaan.js"></script>
   <script src="js/tekstit.js"></script>
+  <script src="js/direktiivit/http-virhe.js"></script>
   <script src="js/direktiivit/huomautukset.js"></script>
   <script src="js/direktiivit/kaavio.js"></script>
   <script src="js/direktiivit/kielen-vaihto.js"></script>
@@ -124,6 +126,7 @@
   <script src="js/lataa/lataaui.js"></script>
   <script src="js/osien-valinta/osien-valintaui.js"></script>
   <script src="js/palvelut/arviointi.js"></script>
+  <script src="js/palvelut/httpvirhe.js"></script>
   <script src="js/palvelut/huomautus.js"></script>
   <script src="js/palvelut/poistumisvaroitus.js"></script>
   <script src="js/palvelut/raportti.js"></script>
