--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -119,6 +119,7 @@
   <script src="js/direktiivit/eperusteet-linkki.js"></script>
   <script src="js/direktiivit/polku.js"></script>
   <script src="js/direktiivit/osalista.js"></script>
+  <script src="js/direktiivit/scroll-position.js"></script>
   <script src="js/direktiivit/tutkinnonosa-tilastot.js"></script>
   <script src="js/direktiivit/vastaukset-muistissa.js"></script>
   <script src="js/arviointi/arviointiui.js"></script>
