OPH-1426: Sivutuksen asettelua korjattu

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -106,6 +106,7 @@
   <script src="bower_components/AngularJS-Toaster/toaster.js"></script>
   <script src="bower_components/jquery-scrollfix/src/scrollfix.js"></script>
   <script src="bower_components/aituaipaljs/src/js/yhteiset/palvelut/lokalisointi.js"></script>
+  <script src="bower_components/ng-fastclick/dist/index.min.js"></script>
   <!-- endbuild -->
   <!-- build:js js/app.js -->
   <script src="js/osaan.js"></script>
