--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -13,7 +13,7 @@
   <meta name="robots" content="index, nofollow">
   <meta name="description" content="Palvelu oman osaamisen arviointiin ammatillisissa perustutkinnoissa sekä ammatti- ja erikoisammattitutkinnoissa. Tjänst för bedömning av det egna kunnandet inom yrkesinriktade grundexamina, yrkesexamina och specialyrkesexamina.">
   <meta name="keywords" content="ammatti, ammattitaitovaatimus,tutkinnon perusteet,näyttötutkinto,arviointi,ammatillinen perustutkinto,perustutkinto,ammattitutkinto,erikoisammattitutkinto,aikuiskoulutus,ammattikoulutus,pt,at,eat">
-  <meta name="viewport" content="width=device-width, initial-scale=.9, maximum-scale=.9"/>
+  <meta name="viewport" content="width=device-width, initial-scale=.9, minimum-scale=.9, maximum-scale=1.2, user-scalable=yes">
 </head>
 <!--[if lt IE 9]>
 <body>
