OPH-1567: angular-loading-bar käyttöön

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -5,6 +5,7 @@
   <title>osaan.fi</title>
 
   <!-- build:css css/libs.css -->
+  <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.min.css">
   <link rel="stylesheet" href="bower_components/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="bower_components/AngularJS-Toaster/toaster.css">
   <!-- endbuild -->
