OPH-1426: Printtityylin optimointia A5-kokoon

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -35,12 +35,20 @@
   <section id="page-container">
     <header>
       <section class="app-wrapper">
-        <img src="img/opetushallitus.svg" class="visible-print pull-right" width="200" />
-        <a id="oph-logo" class="hidden-print" href="http://www.oph.fi"></a>
-        <img src="img/OPH-Ossi-logo.svg" width="60" class="visible-print" align="left" />
-        <a id="ossi-logo" class="hidden-print" href="#/"></a>
 
-        <h1 class="logo"><a href="#/" translate="etusivu.otsikko"></a><br /><span class="small-type jagkan" translate="etusivu.jagkan"></span></h1>
+        <div class="col-xs-12 visible-print nopad printhead">
+          <div class="col-xs-7 nopad">
+            <img src="img/OPH-Ossi-logo.svg" class="pull-left"/>
+            <h1 class="logo pull-left"><a href="#/" translate="etusivu.otsikko"></a><br /><span class="small-type jagkan" translate="etusivu.jagkan"></span></h1>
+          </div>
+          <div class="col-xs-5 nopad">
+            <img src="img/opetushallitus.svg" class="pull-right" />
+          </div>
+        </div>
+
+        <a id="oph-logo" class="hidden-print" href="http://www.oph.fi"></a>
+        <a id="ossi-logo" class="hidden-print" href="#/"></a>
+        <h1 class="logo hidden-print"><a href="#/" translate="etusivu.otsikko"></a><br /><span class="small-type jagkan" translate="etusivu.jagkan"></span></h1>
       </section>
     </header>
     <http-virhe></http-virhe>
