OPH-1576: Wizardin otsikko myös html titleen

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -2,7 +2,7 @@
 <!--[if lt IE 9]> <html> <![endif]-->
 <!--[if gte IE 9]><!--> <html ng-app="osaan.fi"> <!--<![endif]-->
 <head>
-  <title>osaan.fi</title>
+  <title ng-bind="title">osaan.fi</title>
 
   <!-- build:css css/libs.css -->
   <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.min.css">
