OPH-1576: Tutkinto otsikkoon raportti-sivulla

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -2,7 +2,7 @@
 <!--[if lt IE 9]> <html> <![endif]-->
 <!--[if gte IE 9]><!--> <html ng-app="osaan.fi"> <!--<![endif]-->
 <head>
-  <title ng-bind="title">osaan.fi</title>
+  <title title-injection ng-bind="title">osaan.fi</title>
 
   <!-- build:css css/libs.css -->
   <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.min.css">
@@ -139,6 +139,7 @@
   <script src="js/palvelut/arviointi.js"></script>
   <script src="js/palvelut/httpvirhe.js"></script>
   <script src="js/palvelut/huomautus.js"></script>
+  <script src="js/palvelut/otsikko.js"></script>
   <script src="js/palvelut/poistumisvaroitus.js"></script>
   <script src="js/palvelut/raportti.js"></script>
   <script src="js/palvelut/tallennus.js"></script>
