--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -15,6 +15,12 @@
   <meta name="description" content="Palvelu oman osaamisen arviointiin ammatillisissa perustutkinnoissa sekä ammatti- ja erikoisammattitutkinnoissa. Tjänst för bedömning av det egna kunnandet inom yrkesinriktade grundexamina, yrkesexamina och specialyrkesexamina.">
   <meta name="keywords" content="ammatti, ammattitaitovaatimus,tutkinnon perusteet,näyttötutkinto,arviointi,ammatillinen perustutkinto,perustutkinto,ammattitutkinto,erikoisammattitutkinto,aikuiskoulutus,ammattikoulutus,pt,at,eat">
   <meta name="viewport" content="width=device-width, initial-scale=.9, minimum-scale=.9, maximum-scale=1.2, user-scalable=yes">
+
+  <meta property="og:title" content="Osaamisen tunnistaminen - osaan.fi"/>
+  <meta property="og:image" content="http://www.osaan.fi/img/OPH-Ossi-logo-iso.png"/>
+  <meta property="og:site_name" content="Osaan.fi"/>
+  <meta property="og:description" content="Palvelu oman osaamisen arviointiin ammatillisissa perustutkinnoissa sekä ammatti- ja erikoisammattitutkinnoissa. Tjänst för bedömning av det egna kunnandet inom yrkesinriktade grundexamina, yrkesexamina och specialyrkesexamina." />
+
 </head>
 <!--[if lt IE 9]>
 <body>
