OPH-1698 Osaamisalat käyttöliittymään

--- a/app/frontend/src/index.html
+++ b/app/frontend/src/index.html
@@ -156,6 +156,7 @@
   <script src="js/rest/ammattitaidonkuvaus.js"></script>
   <script src="js/rest/koulutusala.js"></script>
   <script src="js/rest/ohje.js"></script>
+  <script src="js/rest/osaamisala.js"></script>
   <script src="js/rest/tutkinnonosa.js"></script>
   <script src="js/rest/tutkinto.js"></script>
   <!-- endbuild -->
